Configuracióna correcta nlog/elastic

--- a/Store.Api/nlog.config
+++ b/Store.Api/nlog.config
@@ -6,26 +6,26 @@
       internalLogFile="c:\temp\internal-nlog.txt">
 
 	<extensions>
-		<add assembly="NLog.Web.AspNetCore"/>
-		<add assembly="NLog.Targets.ElasticSearch"/>
+		<add assembly="NLog.Web.AspNetCore" />
+		<add assembly="Elastic.NLog.Targets" />
 	</extensions>
 
 	<targets>
 		<target name="elastic"
-				xsi:type="ElasticSearch"
-				uri="http://localhost:9200"
-				index="store-logs-${shortdate}"
-				includeTypeName="false">
-			<layout xsi:type="JsonLayout">
-				<attribute name="message" layout="${message}" />
-				<attribute name="level" layout="${level:upperCase=true}" />
-			</layout>
-		</target>
-		<target name="logconsole" xsi:type="Console" />
+				xsi:type="Elasticsearch"
+				nodeUris="http://localhost:9200"
+				indexFormat="store-logs-${shortdate}" />
+
+		<target name="logconsole"
+				xsi:type="Console"
+				layout="${longdate}|${level}|${logger}|${message}${exception:format=ToString}" />
 	</targets>
 
 	<rules>
-		<logger name="Microsoft.*" maxlevel="Info" final="true" />
+		<logger name="Microsoft.*" maxlevel="Warn" final="true" />
+		<logger name="System.*" maxlevel="Warn" final="true" />
+
 		<logger name="*" minlevel="Info" writeTo="elastic,logconsole" />
 	</rules>
+
 </nlog>
