Integración con RabbitMQ

--- a/Store.Worker/Store.Worker/nlog.config
+++ b/Store.Worker/Store.Worker/nlog.config
@@ -18,7 +18,7 @@
 			indexFormat="store-logs-${shortdate}">
 
 			<layout xsi:type="ElasticCommonSchemaLayout" includeAllProperties="true">
-				<label name="app_name" layout="Store.Api" />
+				<label name="app_name" layout="Store.Worker" />
 			</layout>
 
 		</target>
