Generación de documentación

--- a/Store.Worker/Store.Worker/Store.Worker.csproj
+++ b/Store.Worker/Store.Worker/Store.Worker.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-Store.Worker-25afcb67-69c0-4421-97ec-e5c1e43d50da</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
