--- a/Store.Api/appsettings.json
+++ b/Store.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=5432;Database=MyStoreDb;Username=admin;Password=password123",
-    "RedisConnection": "localhost:6379"
+    "PostgresConnection": "Host=postgres_db;Port=5432;Database=MyStoreDb;Username=admin;Password=password123",
+    "RedisConnection": "redis_cache:6379"
   }
 
 }
