--- a/Store.Worker/Store.Worker.csproj
+++ b/Store.Worker/Store.Worker.csproj
@@ -18,6 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Store.Domain\Store.Domain.csproj" />
+    <ProjectReference Include="..\Store.Domain\Store.Domain.csproj" />
   </ItemGroup>
 </Project>
