--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
       - store-network     
 
   # Servicios de la Aplicación
-  store.api:
+  store-api:
     image: storeapi
     build:
       context: .
