--- a/Store.Api/appsettings.Development.json
+++ b/Store.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Port=5432;Database=MyStoreDb;Username=admin;Password=password123;Include Error Detail=true",
+    "RedisConnection": "localhost:6379"
+  },
+  "RabbitMQ": {
+    "Host": "localhost"
   }
 }
