--- a/Store.Api/appsettings.json
+++ b/Store.Api/appsettings.json
@@ -8,7 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostgresConnection": "Host=postgres_db;Port=5432;Database=MyStoreDb;Username=admin;Password=password123",
-    "RedisConnection": "redis_cache:6379"
+    "RedisConnection": "backend_course_redis:6379"
+  },
+  "MassTransit": {
+    "Host": "backend_course_rabbitmq"
   }
-
 }
