Todos los contenedores de aplicaciones externas funcionando

--- a/Store.Worker/appsettings.Development.json
+++ b/Store.Worker/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MassTransit": {
+    "Host": "localhost"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   }
 }
