--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,9 +63,9 @@ services:
     container_name: kibana
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - XPACK_SECURITY_ENCRYPTIONKEY=c149666f827448839076829741285324
-      - XPACK_REPORTING_ENCRYPTIONKEY=83917462058372649103847562910384
-      - XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY=92038475610293847561029384756102
+      - XPACK_SECURITY_ENCRYPTIONKEY="c149666f827448839076829741285324"
+      - XPACK_REPORTING_ENCRYPTIONKEY="83917462058372649103847562910384"
+      - XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY="92038475610293847561029384756102"
     ports:
       - "5601:5601"
     depends_on:
