--- a/Store.Api/appsettings.Development.json
+++ b/Store.Api/appsettings.Development.json
@@ -14,5 +14,10 @@
   },
   "MassTransit": {
     "Host": "localhost"
+  },
+  "Jwt": {
+    "Key": "Esta_Es_Una_Clave_Muy_Secreta_Y_Larga_2024!",
+    "Issuer": "https://localhost:7260",
+    "Audience": "https://localhost:7260"
   }
 }
